spade-tests/src/snapshots/spade_tests__ports_integration__ports_are_not_allowed_in_functions.snap
---
source: spade-tests/src/ports_integration.rs
---
fn not_allowed(a: &bool) -> bool {
    true
}


error: Port argument in function
  ┌─ testinput:1:19
  │
1 │ fn not_allowed(a: &bool) -> bool {
  │                   ^^^^^ This is a port
  │
  = note: Only entities and pipelines can take ports as arguments


